Comiiit sie nie commitnol